# freecraft-ale-clone

./: readme.txt
aleona-2003-11-02/: AUTHORS  Makefile.in  README  autogen.sh  buildfcmp.sh  configure.ac  createccl.sh
aleona-2003-11-02/buildings/barracks/: barracks-summer-01.max  barracks-summer-04.max
aleona-2003-11-02/buildings/cannon_tower/: cannon_tower-summer-05.max
aleona-2003-11-02/buildings/fortress/: fortress-summer-02.max
aleona-2003-11-02/buildings/great_hall/: great_hall-summer-02.max
aleona-2003-11-02/buildings/guard_tower/: guard_tower-summer-05.max
aleona-2003-11-02/buildings/shipyard/: shipyard-summer-02.max
aleona-2003-11-02/buildings/stronghold/: stronghold-summer-02.max
aleona-2003-11-02/editions/default/campaigns/alliance/: level01a.cm  level02a.cm  level03a.cm  level04a.cm
aleona-2003-11-02/editions/default/campaigns/alliance/level01a/: level01a.pud
aleona-2003-11-02/editions/default/campaigns/alliance/level02a/: level02a.pud
aleona-2003-11-02/editions/wc2-edition/campaigns/: storyline.txt
aleona-2003-11-02/editions/wc2-edition/campaigns/cms/: level-01.cm  level-02.cm  level-03.cm  level-04.cm
aleona-2003-11-02/editions/wc2-edition/campaigns/puds/: level-02.pud  level-03.pud  level-04.pud
aleona-2003-11-02/editions/wc2-edition/campaigns/texts/: level-02.txt  level-04.txt
aleona-2003-11-02/units/ballista/: ballista-02.max
aleona-2003-11-02/units/dragon/: dragon-01.max
aleona-2003-11-02/units/footman/: footman-02.blend
aleona-2003-11-02/units/peasant/: peasant-01.blend
clone-000120/: Common.mk  Makefile  README  (+1 more)
(+638 files in other folders)
